--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,12 +2,12 @@ version: 2
 jobs:
   primeiro:
     docker:
-      - image: circleci/python 
+      - image: circleci/ruby:2.4.1
     steps:
       - run: echo "Funciona"
 
 workflows:
-  primeiro_flow:
   version: 2
-  jobs:
-    - primeiro
+  primeiro_flow:
+    jobs:
+      - primeiro
