--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,4 +10,6 @@ workflows:
   version: 2
   primeiro_flow:
     jobs:
-      - primeiro
+      - primeiro:
+        filter:
+          only: master
